Modify access rules

--- a/project.config
+++ b/project.config
@@ -4,5 +4,10 @@
 	label-Code-Review = -2..+2 group google/gerritcodereview-maintainers@googlegroups.com
 	label-Verified = -1..+1 group gerrit-verifiers
 	submit = group google/gerritcodereview-maintainers@googlegroups.com
+	abandon = group gerrit-verifiers
+	removeReviewer = group google/gerritcodereview-maintainers@googlegroups.com
+	editTopicName = +force group google/gerritcodereview-maintainers@googlegroups.com
 [project]
 	description = Reusable building blocks for Buck build system.
+[access "refs/*"]
+	owner = group google/gerritcodereview-maintainers@googlegroups.com
