Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,13 +1,20 @@
 [access]
 	inheritFrom = Public-Projects
 [access "refs/heads/*"]
+	label-Code-Review = -2..+2 group bucklets-maintainers
 	label-Code-Review = -2..+2 group google/gerritcodereview-maintainers@googlegroups.com
+	label-Verified = -1..+1 group bucklets-maintainers
 	label-Verified = -1..+1 group gerrit-verifiers
+	submit = group bucklets-maintainers
 	submit = group google/gerritcodereview-maintainers@googlegroups.com
+	abandon = group bucklets-maintainers
 	abandon = group gerrit-verifiers
+	removeReviewer = group bucklets-maintainers
 	removeReviewer = group google/gerritcodereview-maintainers@googlegroups.com
+	editTopicName = group bucklets-maintainers
 	editTopicName = +force group google/gerritcodereview-maintainers@googlegroups.com
 [project]
 	description = Reusable building blocks for Buck build system.
 [access "refs/*"]
+	owner = group bucklets-maintainers
 	owner = group google/gerritcodereview-maintainers@googlegroups.com
