Require Library-Compliance for updates of buckversion

--- a/project.config
+++ b/project.config
@@ -1,5 +1,14 @@
 [access]
 	inheritFrom = Public-Projects
+[project]
+	description = Reusable building blocks for Buck build system.
+[label "Library-Compliance"]
+	function = MaxWithBlock
+	copyAllScoresIfNoCodeChange = true
+	copyAllScoresOnTrivialRebase = true
+	value = -1 Do not submit
+	value =  0 No score
+	value = +1 Approved
 [access "refs/heads/*"]
 	label-Code-Review = -2..+2 group bucklets-maintainers
 	label-Code-Review = -2..+2 group google/gerritcodereview-maintainers@googlegroups.com
@@ -13,8 +22,6 @@
 	removeReviewer = group google/gerritcodereview-maintainers@googlegroups.com
 	editTopicName = group bucklets-maintainers
 	editTopicName = +force group google/gerritcodereview-maintainers@googlegroups.com
-[project]
-	description = Reusable building blocks for Buck build system.
 [access "refs/*"]
 	owner = group bucklets-maintainers
 	owner = group google/gerritcodereview-maintainers@googlegroups.com
