Modify access rules

--- a/project.config
+++ b/project.config
@@ -9,6 +9,7 @@
 	value = -1 Do not submit
 	value =  0 No score
 	value = +1 Approved
+	defaultValue = 0
 [access "refs/heads/*"]
 	label-Code-Review = -2..+2 group bucklets-maintainers
 	label-Code-Review = -2..+2 group google/gerritcodereview-maintainers@googlegroups.com
@@ -22,6 +23,7 @@
 	removeReviewer = group google/gerritcodereview-maintainers@googlegroups.com
 	editTopicName = group bucklets-maintainers
 	editTopicName = +force group google/gerritcodereview-maintainers@googlegroups.com
+	label-Library-Compliance = -1..+1 group gerrit-lib
 [access "refs/*"]
 	owner = group bucklets-maintainers
 	owner = group google/gerritcodereview-maintainers@googlegroups.com
