Add submit requirements for project bucklets
Rules for creating new submit requirements are as follows:
* We don't create submit requirements for labels that are not blocking.
* For labels that do not define any values, we assume they are
overriding a label definition from the parent project (i.e. to ignore
this label in the child project), hence we create a non-applicable
submit requirement for them.
* For other blocking labels, we create a corresponding submit
requirement for them.

Change-Id: I719747569eca397b7741e5e4116978c6a0de1a9d

--- a/project.config
+++ b/project.config
@@ -27,3 +27,7 @@
 [access "refs/*"]
 	owner = group bucklets-maintainers
 	owner = group google/gerritcodereview-maintainers@googlegroups.com
+[submit-requirement "Library-Compliance"]
+	description = Submit requirement for the 'Library-Compliance' label
+	submittableIf = label:Library-Compliance=MAX -label:Library-Compliance=MIN
+	canOverrideInChildProjects = true
