--- a/project.config
+++ b/project.config
@@ -29,5 +29,6 @@
 	owner = group google/gerritcodereview-maintainers@googlegroups.com
 [submit-requirement "Library-Compliance"]
 	description = Submit requirement for the 'Library-Compliance' label
+	applicableIf = file:\"^buckversion$\"
 	submittableIf = label:Library-Compliance=MAX AND -label:Library-Compliance=MIN
 	canOverrideInChildProjects = true
