--- a/project.config
+++ b/project.config
@@ -2,6 +2,7 @@
 	inheritFrom = Public-Projects
 [project]
 	description = Reusable building blocks for Buck build system.
+	state = Read Only
 [label "Library-Compliance"]
 	function = MaxWithBlock
 	copyAllScoresIfNoCodeChange = true
@@ -29,5 +30,6 @@
 	owner = group google/gerritcodereview-maintainers@googlegroups.com
 [submit-requirement "Library-Compliance"]
 	description = Submit requirement for the 'Library-Compliance' label
+	applicableIf = file:\"^buckversion$\"
 	submittableIf = label:Library-Compliance=MAX AND -label:Library-Compliance=MIN
 	canOverrideInChildProjects = true
